--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-   OPENAI_API_KEY = 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
+   OPENAI_API_KEY= 
