--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-   OPENAI_API_KEY= 
+   OPENAI_API_KEY=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
